client/src/assets/styles.css
/* GLOBALS -----------------------------------------------------------*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: Verdana, sans-serif;
    background-color: unset;
    border: unset;
}

body {
    background: linear-gradient(to top, #c6edbb, #def4d7);
    background-attachment: fixed;
}

#root {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 20px;
    
}

a, button {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

input[type="date"], input[type="datetime-local"] {
    -webkit-appearance: none; /* nothing else works */
    background-color: white;
    color: black;
}

input[type="radio"] {
    height:20px;
    width:20px;
}

input::-webkit-date-and-time-value {
    text-align: left;
}

/* HEADER --------------------------------------------------------*/

#header {
    background-color: hsl(106, 58%, 90%);
    width: 100vw;
    display: flex;
    align-items: center;
    position: fixed;
    justify-content: space-between;
    padding: 10px;
}


#header button {
    background-color: unset;
    border: none;
    font-size: 20px;
}

#header .fa-house {
    padding: 0 10px;
}

#header img {
    width: 170px;
}


/* MENU ----------------------------------------------------------*/
#menu-tab-wrapper {
    display: flex;
    flex-direction: column;
    width: 92vw;
    max-width: 600px;
    background-color: white;
    border: 2px solid rgb(132, 127, 127);
    border-bottom: 7px solid black;
    border-radius: 15px;
    box-shadow: 0 0 3px rgb(160, 156, 156);
    margin-top: 120px;
}

.menu-tab {
    display: flex;
    flex: 1;
    justify-content: space-between;
    align-items: center;
    border-top: 1px solid rgb(142, 132, 132);
    cursor: pointer;
    padding: 10px 20px;
    font-size: 20px;
}

.menu-tab:hover, .menu-tab:active {
    background-color: #dbd9d9;
}

.menu-tab-logo {
    padding-right: 10px;
}

.menu-tab-name {
    font-weight: normal;
}

#logout {
    margin-top: 20px;
    color: rgb(237, 48, 48);
    font-size: 16px;
}

/* login form -----------------------------------------------------------*/

#login-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    width: 360px;
    border-radius: 10px;
    border: 2px solid rgb(132, 127, 127);
    border-bottom: 7px solid black;
    box-shadow: 0 0 3px rgb(160, 156, 156);
    padding: 20px 0;
    margin-top: 25vh;
}

#login-form input {
    width: 90%;
    padding: 12px 20px;
    margin: 8px 0;
    border: 1px solid #a9a4a4;
    border-radius: 4px;
    font-size: 16px;
    margin-bottom: 10px;
}

#login-form h2 {
    padding: 15px;
}

#login-form p {
    padding-top: 15px;
}

.login-button {
	background-color:black;
	border-radius:10px;
	color: white;
	font-size:20px;
	padding:10px 0;
    margin: 10px;
    width: 90%;
}

.login-button:hover, .login-button:active {
    background-color: rgb(50,50,50);
}


/*  trainings page -------------------------------------------------------------- */
#trainings-options {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
    border: 2px solid rgb(132, 127, 127);
    border-radius: 10px;
    border-bottom: 5px solid black;
    box-shadow: 0 0 3px rgb(160, 156, 156);
    width: 95vw;
    max-width: 600px;
    padding: 0 10px;
    margin-top: 90px;
}

#training-options-buttons {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    padding: 10px 0;
}

#training-options-buttons .fa-plus {
    padding-right: 5px;
}

.create-new-training {
    height: 100%;
    font-size: 18px;
}

#training-options-buttons .fa-magnifying-glass {
    padding-left: 8px;
}

.filter-trainings-button {
    font-size: 18px;
    background-color: white;
}


/* training card --------------------------------- */
.training-card {
    display: flex;
    flex-direction: column;
    min-height: 250px;
    width: 95vw;
    max-width: 600px;
    background-color: white;
    border: 2px solid rgb(132, 127, 127);
    border-bottom: 7px solid black;
    border-radius: 10px;
    box-shadow: 0 0 3px rgb(160, 156, 156);
    margin: 15px 0;
}

.training-card-overview {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.training-card-buttons {
    text-align: end;
    margin-bottom: 8px;
}

.training-card-activity {
    width: 70%;
}

.training-card-edit, .training-card-delete {
    font-size: 16px;
    font-weight: normal;
    padding: 0 5px;
    background-color: white;
}

.training-card-edit {
    color: cornflowerblue;
}

.training-card-delete {
    color: red;
}

.training-card-button-wrap {
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    min-height: 80px;
}

.show-more-button-wrap {
    flex: 1;
}

.show-more-button {
    font-size: 20px;
    background-color: white;
    padding: 15px;
    color: black;
}

.show-more-button span {
    text-decoration: underline;
    padding: 0 5px;
}

.attendance-button {
    height: 35px;
    width: 100px;
    margin: 5px 10px 10px 0;
    border-radius: 5px;
    padding: 5px 10px;
    background-color: white;
    font-size: 16px;
}

.accept {
    border: 2px solid rgb(95, 190, 95);
    color: rgb(95, 190, 95);
}

.accept.active {
    background-color: rgb(95, 190, 95);
    color: white;
}

.reject {
    border: 2px solid rgb(218, 76, 76);
    color: rgb(218, 76, 76);
}

.reject.active {
    background-color: rgb(218, 76, 76);
    color: white;
}

.training-card h3,
.training-card h4 {
    padding: 4px 20px;
}

.training-card h2,
.training-card p {
    padding: 20px 20px 4px 20px;
}

.add-host-btn {
    color: cornflowerblue;
    width: 100%;
    font-size: 14px;
    padding: 10px 0;
}
/* ... */

